--- a/ansible/roles/proxmox_cluster_prep/files/hosts.j2
+++ b/ansible/roles/proxmox_cluster_prep/files/hosts.j2
@@ -1,4 +1,4 @@
 127.0.0.1 localhost
 {% for host in groups['proxmox'] %}
-{{ hostvars[host].ansible_host }} {{ host }} {{ hostvars[host].fqdn }}
+{{ hostvars[host].proxmox_ip }} {{ host }} {{ hostvars[host].fqdn }}
 {% endfor %}
