--- a/ansible/roles/proxmox/files/fcos-k3s-ha-control.bu.j2
+++ b/ansible/roles/proxmox/files/fcos-k3s-ha-control.bu.j2
@@ -17,7 +17,7 @@ storage:
       mode: 0644
       overwrite: true
       contents:
-        inline: "{{ vm_hostname }}"
+        inline: "{{ proxmox_vm_hostname }}"
 
     # systemd-resolved + NextDNS DoT
     - path: /etc/systemd/resolved.conf.d/nextdns.conf
